GIANT Blast Mining update. Lots of new config options in advanced.yml

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -187,14 +187,7 @@ Mining.Skillup=[[YELLOW]]Mining skill increased by {0}. Total ({1})
 
 #Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35% ore yield
-Mining.Blast.Effect.1=+40% ore yield
-Mining.Blast.Effect.2=+45% ore yield, no debris
-Mining.Blast.Effect.3=+50% ore yield, no debris
-Mining.Blast.Effect.4=+55% ore yield, no debris, double drops
-Mining.Blast.Effect.5=+60% ore yield, no debris, double drops
-Mining.Blast.Effect.6=+65% ore yield, no debris, triple drops
-Mining.Blast.Effect.7=+70% ore yield, no debris, triple drops
+Mining.Blast.Effect=+{0} ore yield, -{1} debris yield, {2}x drops
 Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
