--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.4.01-dev
+ = Fixed bug where trying to use /mctop or /xplock with the Smelting child skill caused NPEs
 
 Version 1.4.00
  + Added new Child Skill - Smelting!
