--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.4.01-dev
  = Fixed bug where trying to use /mctop or /xplock with the Smelting child skill caused NPEs
  = Fixed bug where /mctop and /mcrank wouldn't show overall power levels for servers using Flatfile
+ = Fixed bug where Smelting would throw consistent errors due to offline players
 
 Version 1.4.00
  + Added new Child Skill - Smelting!
