Fixed bug with /ptp display strings when trying to teleport after having been hurt or recently teleporting.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -543,7 +543,7 @@ Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Specify=[[RED]]You must specify a party.
 Party.Teleport.Dead=[[RED]]You can't teleport to a dead player.
-Party.Teleport.Hurt=[[RED]]You've been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]You have been hurt in the last {0} seconds and cannot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can't teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
