--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.4.01-dev
  = Fixed bug where ptp permissions weren't being handled properly
  = Fixed bug where Beast Lore wouldn't work
  = Fixed bug where Chimaera Wing would always teleport to spawn, even when the player had a valid bed spawn location
+ = Updated locale files
 
 Version 1.4.00
  + Added new Child Skill - Smelting!
