--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,8 @@ Key:
 
 Version 1.4.02-dev
  + Added API to get the skill and power level caps.
+ = Fixed bug where Deflect was calculated based on the attacker, not the defender
+ = Fixed bug where some skills weren't registering as unlocked until one level later
 
 Version 1.4.01
  = Fixed bug where trying to use /mctop or /xplock with the Smelting child skill caused NPEs
