--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,8 @@ Version 1.4.02-dev
  + Added API to get the skill and power level caps.
  = Fixed bug where Deflect was calculated based on the attacker, not the defender
  = Fixed bug where some skills weren't registering as unlocked until one level later
+ = Fixed bug where the PTP cooldown was being read improperly
+ = Fixed bug where /ptp <accept|toggle|acceptall> where broken
 
 Version 1.4.01
  = Fixed bug where trying to use /mctop or /xplock with the Smelting child skill caused NPEs
