--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.4.02-dev
  = Fixed bug where some skills weren't registering as unlocked until one level later
  = Fixed bug where the PTP cooldown was being read improperly
  = Fixed bug where /ptp <accept|toggle|acceptall> where broken
+ = Fixed ClassCastException relating to counter-attack with Swords
 
 Version 1.4.01
  = Fixed bug where trying to use /mctop or /xplock with the Smelting child skill caused NPEs
