--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ Version 1.4.03-dev
  = Fixed bug where Fishing was becoming less successful at higher levels
  = Fixed bug with using Salvage on stacked items.
  = Fixed bug where the 'mcmmo.commands.ptp.world.all' was registered twice
+ = Fixed bug where Beast Lore wouldn't work on friendly pets
  ! Moved the Salvage unlock level from config.yml to advanced.yml
  - Removed option to disable Salvage via the config file. This should be handled via permissions instead.
  - Removed the option to use Woodcutting without an axe from the config file.
