--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,8 @@ Key:
 
 Version 1.4.03-dev
  + Added option to advanced.yml to determine the # of enchant levels used when buffing Super Breaker & Giga Drill Breaker
+ = Fixed bug with Blast Mining not dropping blocks correctly
+ = Fixed bug with custom blocks not working
  = Fixed bug where triple drops would award twice the amount of experience in Herbalism and Mining
  = Fixed bug where Green Thumb would consume wheat instead of seeds
  = Fixed bug where Green Terra would consume twice the amount of seed when used on crops
