--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.4.03-dev
  + Improved stats display for child skills
  = Fixed bug with Blast Mining not dropping blocks correctly
  = Fixed bug with custom blocks not working
+ = Fixed bug where Blast Mining was awarding too much XP
  = Fixed bug where triple drops would award twice the amount of experience in Herbalism and Mining
  = Fixed bug where Green Thumb would consume wheat instead of seeds
  = Fixed bug where Green Terra would consume twice the amount of seed when used on crops
