--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.4.04-dev
+ + Added functions to ExperienceAPI for use with offline players
  = Fixed bug where trying to activate a Chimaera Wing would require one item too much
  = Fixed bug where Treefeller would try to cut too many leaves and reach the threshold when it shouldn't
  = Fixed bug where Mining wasn't awarding double drops
