--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ Version 1.4.04-dev
  = Fixed bug where the API would fail if the name of a player's current party is requested when the player isn't in one (Thanks @dualspiral!)
  = Fixed bug with retrieving a player's party members
  = Fixed bug which caused an NPE when trying to join the party of a non-existing player or when ptp to a non-existing player
+ ! Changed config node name for the skill experience modifiers from "Experience.Formula.Multiplier.[Skill]" to "Experience.Formula.Modifier.[Skill]"
  ! Updated localization files
  - Removed deprecated functions from API classes.
  - Removed functions for getting the PlayerProfile - using API classes is preferred, but if not the McMMOPlayer should be used instead
