--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ Version 1.4.04-dev
  = Fixed bug which caused an NPE when trying to join the party of a non-existing player or when ptp to a non-existing player
  ! Changed config node name for the skill experience modifiers from "Experience.Formula.Multiplier.[Skill]" to "Experience.Formula.Modifier.[Skill]"
  ! Updated localization files
+ ! mcMMO abilities can no longer be activated while in Creative mode
  - Removed deprecated functions from API classes.
  - Removed functions for getting the PlayerProfile - using API classes is preferred, but if not the McMMOPlayer should be used instead
  - Removed Ender Dragon, Wither, and Witch from granting combat experience and related configuration options
