--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
 
-Version 1.4.04-dev
+Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
  + Added Nether Quartz Ore to Mining
  + Added Dropper, Hopper, and Trapped Chest to blocks that shouldn't activate abilities
