--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.4.05-dev
  + Added option to allow refreshing of chunks after block-breaking abilities. (Disabled by default)
+ = Fixed bug where /addxp was setting instead of adding experience
 
 Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
