Sharing with the dead is bad, they have nothing to gain.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.4.05-dev
  + Added option to allow refreshing of chunks after block-breaking abilities. (Disabled by default)
  = Fixed bug where /addxp was setting instead of adding experience
+ = Fixed bug which allowed players to share experience with nearby dead players
 
 Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
