--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.4.05-dev
  = Fixed bug where /addxp was not processessing level-ups for online players
  = Fixed bug which allowed players to share experience with nearby dead players
  = Fixed bug with ChimaeraWings not taking Wings from a players inventory properly
+ = Fixed bug which caused a NPE when trying to use /mctop smelting
 
 Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
