--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,8 @@ Version 1.4.05-dev
  = Fixed bug which allowed players to share experience with nearby dead players
  = Fixed bug with ChimaeraWings not taking Wings from a players inventory properly
  = Fixed bug which caused a NPE when trying to use /mctop smelting
+ = Fixed Berserk misbehaving when /reload was used
+ = Fixed parties misbehaving when /reload was used
 
 Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
