--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ Version 1.4.05-dev
  = Fixed ClassCastException with Taming
  = Fixed huge mushroom blocks not being properly tracked
  = Fixed potion buff option not using the appropriate # of ticks
+ = Fixed Chimera Wing spamming console if Metrics was disabled
 
 Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
